<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarLibroActivity"
    android:orientation="vertical"
    android:background="@color/white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_buscarLibros"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#4C589C"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_text"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bus_txttext"
        android:hint="@string/str_digitetitulo"
        android:inputType="text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bus_btnbuscar"
        android:text="@string/str_btnbuscar"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>

</LinearLayout>